# nesfr3_selfwork

./: .bashrc  .gitignore  .gitmodules  Dockerfile  README.md  ex1  nodes.md  setup_environment.sh  start_container.sh
abc/: Dockerfile
actor/: Harry_mouth_D.dds  actor.world  actor_5.dae  actor_8.dae
actor/actor_10/: actor_10.dae
actor/actor_12/: Severus_Snape_eye_d.dds  Severus_Snape_head_d.dds
actor/actor_15/: actor_15.dae
actor/actor_2/: actor_2.dae
actor/actor_5/: hair_diff_000_a_uni.tga
actor/actor_6/: actor_6.dae
catkin_ws/src/nesfr3/: README.md
nesfr3_workspace/: setup_environment.sh
nesfr3_workspace/actor/actor_4/: hair_diffuse.tga
nesfr3_workspace/catkin_ws/devel/include/bayes_people_tracker/: PeopleTracker.h
nesfr3_workspace/catkin_ws/devel/include/face_detector/: FaceDetectorAction.h  FaceDetectorActionFeedback.h  FaceDetectorActionGoal.h  (+4 more)
nesfr3_workspace/catkin_ws/src/nesfr3/: .gitignore  .gitmodules  README.md
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_bringup/: CMakeLists.txt
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_bringup/config/: camera_settings.yaml  fisheye.yaml  ouster_2d.lua
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_bringup/launch/: fisheye_only.launch  nesfr3_bag_carto.launch  nesfr3_remote_basic.launch  nesfr3_remote_carto.launch
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_bringup/rviz/: carto.rviz  nesfr3.rviz
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_bringup/scripts/: img_flattener.py  install_deps.sh  odom_publisher.py  setup_CAN.sh  vel_cmd_sender.py
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_msgs/: CMakeLists.txt  package.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_msgs/msg/: Actor.msg  Actor2d.msg  Actors.msg  Actors2d.msg  Blobs.msg  BlobsArray.msg  BoundingBox.msg  ClusterProps.msg  ClusterPropsArray.msg  PointWithConfidence.msg  PoseArrayWithBoxes.msg  PoseArrayWithClusters.msg  TrackingData.msg
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rqt_plugins/shot_controller_rqt/: CMakeLists.txt  README.md  package.xml  plugin.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rqt_plugins/shot_controller_rqt/resource/: ShotController.ui
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rqt_plugins/shot_controller_rqt/scripts/: shot_controller_rqt
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rqt_plugins/shot_controller_rqt/src/shot_controller_rqt/: shot_controller.py
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rviz_plugins/: CMakeLists.txt  README.md  actor_plugin_description.xml  actors_plugin_description.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_rviz_plugins/src/: actor_display.cpp  actor_display.h  actor_visual.cpp  actor_visual.h  actors_display.cpp  actors_display.h
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_services/: CMakeLists.txt  README.md
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_services/include/nesfr3_services/: shot_controller.hh
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_services/src/: shot_controller.cpp  shot_controller_client.cpp
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_services/srv/: FollowActor.srv
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_teleop/: CMakeLists.txt  README.md  package.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_teleop/include/nesfr3_teleop/: drive.h  joystick.h
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_teleop/src/: drive.cpp  joystick.cpp
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/matching/: CMakeLists.txt  package.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/matching/launch/: nesfr3_human_matching.launch
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/matching/src/: nesfr3_human_matching.py  nesfr3_human_matching_backup.py  nesfr3_human_matching_backup2.py  nesfr3_human_matching_backup3.py  nesfr3_human_matching_newbackup.py  nesfr3_human_matching_pose.py
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/pcl_transformer/: CMakeLists.txt  README.md  package.xml
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/pcl_transformer/include/: pcl_transformer.hpp
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/pcl_transformer/launch/: pcl_transformer.launch
nesfr3_workspace/catkin_ws/src/nesfr3/nesfr3_tracking/pcl_transformer/src/: pcl_transformer.cpp
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/: README.md
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/: CMakeLists.txt
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/config/: ouster_2d.lua
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/include/nesfr3_gazebo/: Camera.hh  CameraPlugin.hh  actor_plugin.hh  camera_zoom_plugin.h  fisheye_camera_plugin.h  gimbal_pos_plugin.h  planar_move_plugin.h
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/launch/: cartographer_2d.launch  nesfr3.launch  nesfr3_.launch  new.launch  offline_ouster_2d.launch  robots.launch  robots2.launch
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/materials/: faces.material
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/models/wom_office/: model.config  model.sdf
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/new/: map.world  teef_diff_000_a_uni.tga  test.world
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/new/TESTB/: model.config  model.sdf
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/rviz/: nesfr3.rviz
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/src/: actor_plugin.cpp  camera_zoom_plugin.cpp  fisheye_camera_plugin.cpp  gimbal_pos_plugin.cpp  planar_move_plugin.cpp
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/srv/: shot.srv
nesfr3_workspace/catkin_ws/src/nesfr3_simulations/nesfr3_gazebo/worlds/: actors.urdf.xacro  empty.world  map.world  map.world.xacro  newactors.urdf.xacro  wom_empty_office.world  wom_empty_office.world.xacro  wom_house.world  wom_office.world  wom_office3.world  wom_office4.world  wom_office4.world.xacro
nesfr3_workspace/newactor/: eyes_diffuse.tga  map.dae
readme_media/: URDF_2020F1_explanation
(+313 files in other folders)
